feat: booking fetch
